force-app/main/default/objects/Product_Category__c/Product_Category__c.object-meta.xml
<CustomObject>
    <description>Custom salesforce object which will be the child of category and product to link product and category.</description>
    <label>Product Category</label>
    <nameField>
        <label>Product Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>